--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "cra-template": "1.2.0",
     "framer-motion": "^11.17.0",
     "react": "^19.0.0",
@@ -10,6 +11,7 @@
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
+    "three": "^0.172.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
