--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://gtamrazyan04.github.io/gohar-portfolio-website"
+  "homepage": "https://gtamrazyan.ch"
 }
