--- a/manifest_gohar.json
+++ b/manifest_gohar.json
@@ -3,17 +3,17 @@
   "name": "Gohar Tamrazyan",
   "icons": [
     {
-      "src": "favicon_gohar.ico",
+      "src": ".favicon_gohar.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192_gohar.png",
+      "src": ".logo192_gohar.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512_gohar.png",
+      "src": ".logo512_gohar.png",
       "type": "image/png",
       "sizes": "512x512"
     }
